[Qt] QNX does not support SOCK_SEQPACKET socket type for socketpair in ProcessLauncherQt https://bugs.webkit.org/show_bug.cgi?id=95553

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-08-31
Reviewed by Simon Hausmann.

Calling socketpair with SOCK_SEQPACKET socket type fails on QNX with an error 241 (EPROTOTYPE),
as can be seen by the following debug output: "Creation of socket failed with errno: 241".
A test app shows that SOCK_DGRAM works properly on QNX, thus use it instead of SOCK_SEQPACKET.

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:

Canonical link: https://commits.webkit.org/113419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127253 268f45cc-cd09-0410-ab3c-d52691b4dbfc